<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainMenu">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/userLogin"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/style_edit_text"
        android:text="@string/userLogin"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/learnActivity"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/style_edit_text"
        android:gravity="center"
        android:text="@string/learnActivity"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/MyStepa"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/style_edit_text"
        android:gravity="center"
        android:text="@string/myStepa"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLogin" />

    <TextView
        android:id="@+id/rasp"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_edit_text"
        android:gravity="center"
        android:text="@string/rasp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyStepa" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_edit_text"
        android:gravity="center"
        android:text="@string/mail"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learnActivity" />

    <TextView
        android:id="@+id/pay"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_edit_text"
        android:gravity="center"
        android:text="@string/pay"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <TextView
        android:id="@+id/sitePrepod"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/style_edit_text"
        android:gravity="center"
        android:text="@string/sitePrepod"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rasp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="120dp"
        android:background="@drawable/style_edit_text"
        android:text="@string/btnLogout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>